# sea-g2p

./: .gitignore  Cargo.toml  README.md  build_db.py  common.json  debug_norm.py  debug_norm_v2.py  debug_rust.py  g2p.py  main.py  pyproject.toml  repro_issues.py  reproduce_khong.py  test_regex.py
.github/workflows/: ci.yml  release.yml
python/sea_g2p/: __init__.py  g2p.py  normalizer.py  pipeline.py
python/sea_g2p/cleaner/: text_norm.py
python/sea_g2p/vi_cleaner/: __init__.py  datestime.py  misc.py  num2vi.py  numerical.py  technical.py  units.py
src/: lib.rs
src/g2p/: mod.rs
src/normalizer/: cleaner.rs  mod.rs  num2vi.rs  vi_resources.rs
src/sea_g2p/: g2p.py  normalizer.py  pipeline.py
src/sea_g2p/cleaner/: __init__.py  datestime.py  numerical.py  symbols.py  text_norm.py  units.py
tests/: test_bilingual_phonemize.py  test_normalize.py  test_phonemize.py  test_pipeline.py
